# -EPITECH-3-RType

./: .gitattributes  CMakeLists.txt  pepe.stage
DLLoader/: IDLLoader.hpp
DLLoader/linux/: DLLoader.hpp
DLLoader/win/: DLLoader.hpp
Win32/Release/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
Win32/Release/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
client/includes/: EntityAPI.hpp  Game.hh  Graphics.hh  SystemFactory.hh
client/includes/component/: Collide.hh  Event.hh  Font.hh  Loop.hh  MobPattern.hh  PacketComponent.hh  Position.hh  Size.hh  Speed.hh  Sprite.hh  String.hh  Text.hh  Window.hh
client/includes/system/: CharacterController.hh  ClearScreen.hh  Collider.hh  Draw.hh  DrawText.hh  GetIp.hh  GetUserName.hh  HandleEvent.hh  Move.hh  Network.hh  Render.hh  TaskManager.hh  UpdateMonster.hh  WaitGame.hh
client/src/: Game.cpp  SystemFactory.cpp  main.cpp
client/src/component/: Collide.cpp  Event.cpp  Font.cpp  Loop.cpp  MobPattern.cpp  PacketComponent.cpp  Position.cpp  Size.cpp  Speed.cpp  Sprite.cpp  String.cpp  Text.cpp  Window.cpp
client/src/system/: CharacterController.cpp  ClearScreen.cpp  Collider.cpp  Draw.cpp  DrawText.cpp  GetIp.cpp  GetUserName.cpp  HandleEvent.cpp  Move.cpp  Network.cpp  Render.cpp  TaskManager.cpp  UpdateMonster.cpp  WaitGame.cpp
cmake_modules/: FindSFML.cmake
ecs/: Component.hpp  ECSMap.hpp  ECSMultiMap.hpp  ECSVector.hpp  Engine.cpp  Engine.hpp  Entity.hpp  Id.hpp  ObjectsPool.hpp  Singleton.hpp  Space.hpp  System.hpp
entities/: BasicEnemy.cpp  SineCurveEnemy.cpp
protocol/: Message.hpp  Packet.hh  Protocol.hpp
server/includes/: ATCPMonitor.hh  AUDPMonitor.hh  ISocket.hh  ITCPMonitor.hh  IUDPMonitor.hh  ServerSystemFactory.hh  ThreadPool.hpp  Timer.hpp  UserAddr.hh
server/includes/components/: ConnectedComponent.hpp  GameLaunchedComponent.hpp  HostComponent.hpp  IDComponent.hpp  NameComponent.hpp  PacketComponent.hh
server/includes/linux/: TCPMonitor.hh  TCPSocket.hh  UDPMonitor.hh  UDPSocket.hh
server/includes/systems/: NetworkSystem.hh  StageManager.hh  TasksSystem.hpp
server/includes/windows/: TCPMonitor.hh  TCPSocket.hh  UDPMonitor.hh  UDPSocket.hh
server/src/: ATCPMonitor.cpp  AUDPMonitor.cpp  ServerSystemFactory.cpp  main.cpp
server/src/components/: PacketComponent.cpp
server/src/linux/: TCPMonitor.cpp  TCPSocket.cpp  UDPMonitor.cpp  UDPSocket.cpp
server/src/systems/: NetworkSystem.cpp  StageManager.cpp
server/src/windows/: TCPMonitor.cpp  TCPSocket.cpp  UDPMonitor.cpp  UDPSocket.cpp
test/: Age.hpp  Color.hpp  Delay.hpp  Domotro.cpp  Drive.hpp  Name.hpp  Present.hpp  Sleep.hpp  Wheels.hpp  test.cpp
